--- a/reactdemo/src/routes/Home/Home.scss
+++ b/reactdemo/src/routes/Home/Home.scss
@@ -1,99 +1,24 @@
-body
+.HomeBox
 {
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 800px;
+    background-color: rgba($color: #000000, $alpha: .8);
+    // margin: 0 auto;
+    border-radius: 20px;
+
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+
+    color: #FFF;
+
+    font-size: 100px;
+
+    
     display: flex;
     display: -webkit-flex;
     justify-content: center;
     align-items: center;
     flex-wrap: nowrap;
-}
-.Box
-{
-    width: 300px;
-    height: 300px;
-    /* background-color: rgba(255, 0, 0, 0.8); */
-    margin: 0 auto;
-
-    position: relative;
-
-    animation: rotating 30s linear infinite;
-    transform-origin: 66% 66%;
-}
-.Box span
-{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    clip-path: polygon(57% 0, 75% 0, 26% 85%, 89.5% 85%, 98.4% 100%, 0 100%);
-    background-color: currentColor;
-    
-    /* animation: tween 0.5s infinite; */
-}
-.Box span:nth-child(1)
-{
-    transform: rotate(0deg);
-    filter: brightness(1);
-}
-.Box span:nth-child(2)
-{
-    transform: rotate(120deg);
-    filter: brightness(0.66);
-    top: 18.3%;
-    left: 43.3%;
-}
-.Box span:nth-child(3)
-{
-    transform: rotate(240deg);
-    filter: brightness(0.33);
-
-    top: 46.5%;
-    left: 5.9%;
-}
-
-@keyframes tween
-{
-    0%
-    {
-        width: 100%;
-        height: 100%;
-    }
-    50%
-    {
-        width: 80%;
-        height: 80%;
-    }
-    100%
-    {
-        width: 100%;
-        height: 100%;
-    }
-}
-
-@keyframes rotating {
-    0% {
-        color: #333333;
-        transform: rotate(0deg);
-    }
-
-    20% {
-        color: #ffffff;
-    }
-
-    40% {
-        color: #333333;
-    }
-
-    60% {
-        color: #ffffff;
-    }
-
-    80% {
-        color: #333333;
-    }
-
-    100% {
-        color: #ffffff;
-        transform: rotate(720deg);
-    }
 }
