--- a/reactdemo/src/components/AnimateBackground/AnimateBackground.scss
+++ b/reactdemo/src/components/AnimateBackground/AnimateBackground.scss
@@ -17,13 +17,14 @@
 }
 .Box
 {
+    --randomtime:30s;
     width: 300px;
     height: 300px;
     /* background-color: rgba(255, 0, 0, 0.8); */
 
     position: relative;
 
-    animation: rotating 30s linear infinite;
+    animation: rotating var(--randomtime) linear infinite;
     transform-origin: 66% 66%;
 }
 .Box span
